# pico-cec

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
crc/: CMakeLists.txt
include/: cec-config.h  cec-frame.h  cec-task.h  cec-user.h
src/: blink.c  cec-config.c  cec-frame.c  cec-task.c  cec-user.c  ddc.c  usb-cdc.c
